--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@react-three/drei": "9.96.4",
+    "@react-three/drei": "^9.96.4",
     "@react-three/fiber": "8.15.15",
     "@react-three/rapier": "1.3.0",
     "@types/three": "0.160.0",
@@ -11,7 +11,7 @@
     "react-scripts": "^0.0.0",
     "three": "0.160.1"
   },
-   "scripts": {
+  "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
