--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "dependencies": {
-    "@react-three/drei": "^9.96.4",
-    "@react-three/fiber": "8.15.15",
-    "@react-three/rapier": "1.3.0",
-    "@types/three": "0.160.0",
-    "leva": "0.9.33",
-    "meshline": "3.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "^0.0.0",
-    "three": "0.160.1"
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/rapier": "^2.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "scripts": {
     "start": "webpack serve --mode development",
@@ -23,6 +19,9 @@
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.4",
+    "less": "^4.4.1",
+    "less-loader": "^12.3.0",
+    "motion": "^12.23.12",
     "style-loader": "^4.0.0",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
