--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^11.3.31",
     "lava": "^0.13.6",
+    "motion": "^12.23.12",
     "next": "^14.2.14",
     "postprocessing": "^6.37.7",
     "react": "^18.3.1",
