--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
-  "dependencies": {
-    "@react-three/drei": "^10.7.4",
-    "@react-three/fiber": "^9.3.0",
-    "@react-three/postprocessing": "^3.0.4",
-    "@react-three/rapier": "^2.1.0",
-    "lodash": "^4.17.21",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
-  },
-  "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production"
-  },
-  "main": "/index.js",
-  "devDependencies": {
-    "@babel/core": "^7.28.3",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-react": "^7.27.1",
-    "babel-loader": "^10.0.0",
-    "compression-webpack-plugin": "^11.1.0",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.4",
-    "less": "^4.4.1",
-    "less-loader": "^12.3.0",
-    "motion": "^12.23.12",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.101.3",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
-  }
+	"name": "3d-badge",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"format": "prettier --write src/**/*.{js,ts,tsx,json}"
+	},
+	"dependencies": {
+		"@react-three/drei": "^9.108.3",
+		"@react-three/fiber": "^8.16.8",
+		"@react-three/postprocessing": "^2.15.15",
+		"@react-three/rapier": "^1.4.0",
+		"@tailwindcss/vite": "^4.1.13",
+		"framer-motion": "^11.3.31",
+		"lava": "^0.13.6",
+		"motion": "^12.23.12",
+		"postprocessing": "^6.37.7",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"three": "^0.166.1"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.33.0",
+		"@types/node": "^20",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.0",
+		"@types/three": "^0.180.0",
+		"@vitejs/plugin-react": "^5.0.0",
+		"eslint": "^8",
+		"eslint-config-next": "^14.2.14",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.20",
+		"globals": "^16.3.0",
+		"meshline": "^3.3.1",
+		"postcss": "^8",
+		"prettier": "3.6.2",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5",
+		"typescript-eslint": "^8.39.1",
+		"vite": "^7.1.2"
+	}
 }
